--- a/configs/photo2art_folder.yaml
+++ b/configs/photo2art_folder.yaml
@@ -2,14 +2,14 @@
 # Licensed under the CC BY-NC-SA 4.0 license (https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode).
 
 # logger options
-image_save_iter: 5000        # How often do you want to save output images during training
+image_save_iter: 10000        # How often do you want to save output images during training
 image_display_iter: 100       # How often do you want to display output images during training
 display_size: 16              # How many images do you want to display each time
-snapshot_save_iter: 5000     # How often do you want to save trained models
-log_iter: 10                   # How often do you want to log the training stats
+snapshot_save_iter: 10000     # How often do you want to save trained models
+log_iter: 1                   # How often do you want to log the training stats
 
 # optimization options
-max_iter: 500000             # maximum number of training iterations
+max_iter: 1000000             # maximum number of training iterations
 batch_size: 1                 # batch size
 weight_decay: 0.0001          # weight decay
 beta1: 0.5                    # Adam parameter
@@ -17,7 +17,7 @@ beta2: 0.999                  # Adam parameter
 init: kaiming                 # initialization [gaussian/kaiming/xavier/orthogonal]
 lr: 0.0001                    # initial learning rate
 lr_policy: step               # learning rate scheduler
-step_size: 50000             # how often to decay learning rate
+step_size: 100000             # how often to decay learning rate
 gamma: 0.5                    # how much to decay learning rate
 gan_w: 1                      # weight of adversarial loss
 recon_x_w: 10                 # weight of image reconstruction loss
@@ -30,7 +30,7 @@ vgg_w: 0                      # weight of domain-invariant perceptual loss
 gen:
   dim: 64                     # number of filters in the bottommost layer
   mlp_dim: 256                # number of filters in MLP
-  style_dim: 8                # length of style code
+  style_dim: 12               # length of style code
   activ: relu                 # activation function [relu/lrelu/prelu/selu/tanh]
   n_downsample: 2             # number of downsampling layers in content encoder
   n_res: 4                    # number of residual blocks in content encoder/decoder
@@ -51,6 +51,6 @@ num_workers: 8                              # number of data loading threads
 new_size: 256                               # first resize the shortest image side to this size
 crop_image_height: 256                      # random crop image of this height
 crop_image_width: 256                       # random crop image of this width
-data_root: ./datasets/summer2winter_yosemite     # dataset folder location
-label_a: 0
-label_b: 0
+data_root: ./datasets/photo2art             # dataset folder location
+label_a: 0 
+label_b: 4                                  # attribute num of label
