--- a/configs/edges2shoes_folder.yaml
+++ b/configs/edges2shoes_folder.yaml
@@ -2,22 +2,22 @@
 # Licensed under the CC BY-NC-SA 4.0 license (https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode).
 
 # logger options
-image_save_iter: 10000        # How often do you want to save output images during training
-image_display_iter: 500       # How often do you want to display output images during training
+image_save_iter: 5000        # How often do you want to save output images during training
+image_display_iter: 100       # How often do you want to display output images during training
 display_size: 16              # How many images do you want to display each time
-snapshot_save_iter: 10000     # How often do you want to save trained models
+snapshot_save_iter: 5000     # How often do you want to save trained models
 log_iter: 10                  # How often do you want to log the training stats
 
 # optimization options
-max_iter: 1000000             # maximum number of training iterations
-batch_size: 1                 # batch size
+max_iter: 100000             # maximum number of training iterations
+batch_size: 3                 # batch size
 weight_decay: 0.0001          # weight decay
 beta1: 0.5                    # Adam parameter
 beta2: 0.999                  # Adam parameter
 init: kaiming                 # initialization [gaussian/kaiming/xavier/orthogonal]
 lr: 0.0001                    # initial learning rate
 lr_policy: step               # learning rate scheduler
-step_size: 100000             # how often to decay learning rate
+step_size: 20000              # how often to decay learning rate
 gamma: 0.5                    # how much to decay learning rate
 gan_w: 1                      # weight of adversarial loss
 recon_x_w: 10                 # weight of image reconstruction loss
@@ -52,3 +52,5 @@ new_size: 256                               # first resize the shortest image si
 crop_image_height: 256                      # random crop image of this height
 crop_image_width: 256                       # random crop image of this width
 data_root: ./datasets/edges2shoes/     # dataset folder location
+label_a: 0
+label_b: 0
