--- a/configs/sketch2photo_folder.yaml
+++ b/configs/sketch2photo_folder.yaml
@@ -6,7 +6,8 @@ image_save_iter: 5000         # How often do you want to save output images duri
 image_display_iter: 200       # How often do you want to display output images during training
 display_size: 20              # How many images do you want to display each time
 snapshot_save_iter: 5000      # How often do you want to save trained models
-log_iter: 50                   # How often do you want to log the training stats
+log_iter: 50                  # How often do you want to log the training stats
+seed: None                    # Random seed you want to use
 
 # optimization options
 max_iter: 100000              # maximum number of training iterations
