--- a/configs/summer2winter_yosemite256_folder.yaml
+++ b/configs/summer2winter_yosemite256_folder.yaml
@@ -7,6 +7,7 @@ image_display_iter: 100       # How often do you want to display output images d
 display_size: 16              # How many images do you want to display each time
 snapshot_save_iter: 5000     # How often do you want to save trained models
 log_iter: 10                   # How often do you want to log the training stats
+seed: None                    # Random seed you want to use
 
 # optimization options
 max_iter: 100000             # maximum number of training iterations
@@ -23,7 +24,7 @@ gan_w: 1                      # weight of adversarial loss
 recon_x_w: 10                 # weight of image reconstruction loss
 recon_s_w: 1                  # weight of style reconstruction loss
 recon_c_w: 1                  # weight of content reconstruction loss
-recon_x_cyc_w: 10             # weight of explicit style augmented cycle consistency loss
+recon_x_cyc_w: 0             # weight of explicit style augmented cycle consistency loss
 vgg_w: 0                      # weight of domain-invariant perceptual loss
 
 # model options
@@ -35,6 +36,7 @@ gen:
   n_downsample: 2             # number of downsampling layers in content encoder
   n_res: 4                    # number of residual blocks in content encoder/decoder
   pad_type: reflect           # padding type [zero/reflect]
+  conditional_norm: adain     # conditional normalization type [adain/smain]
 dis:
   dim: 64                     # number of filters in the bottommost layer
   norm: none                  # normalization layer [none/bn/in/ln]
